--- a/实验报告.md
+++ b/实验报告.md
@@ -1,6 +1,9 @@
 ## 1. 项目介绍
 做一个中文检索的项目，主要涉及到的技术有：  
-1. 检索模型：采用了`mT5`模型，具体的实现可以参考[mT5](
+1. **收集文档**：首先，我们需要收集所有要索引的文档。这些文档可以来自各种来源，例如网站、数据库、文件等。
+2. **分词**：接下来，我们需要对文档进行分词。分词是将文本分成单独的单词或短语的过程。这可以通过使用现有的分词器库来完成。
+3. **建立倒排索引**：现在，我们可以开始建立倒排索引了。对于每个单词，我们需要找到包含该单词的所有文档，并将其添加到该单词的文档列表中。
+4. **重排序**：检索重排序技术是一种用于优化搜索引擎结果的技术。它的目的是通过重新排序搜索结果，以便最相关的结果排在前面，从而提高搜索结果的质量。
 ## 2. 实验环境
 我使用了miracl-zh-corpus-22-12数据集作为实验数据集[miracl/miracl-corpus](https://huggingface.co/datasets/Cohere/miracl-zh-corpus-22-12)
 ## 3. 项目结构
