--- a/实验报告.md
+++ b/实验报告.md
@@ -6,6 +6,7 @@
 4. **重排序**：检索重排序技术是一种用于优化搜索引擎结果的技术。它的目的是通过重新排序搜索结果，以便最相关的结果排在前面，从而提高搜索结果的质量。
 ## 2. 实验环境
 我使用了miracl-zh-corpus-22-12数据集作为实验数据集[miracl/miracl-corpus](https://huggingface.co/datasets/Cohere/miracl-zh-corpus-22-12)
+MIRACL是通过从维基百科转储中提取纯文本并丢弃图像、表格等非文本元素等数据清洗过程收集的。然后，使用 WikiExtractor 将每篇文章分成多个段落，这些段落基于自然语言单位（例如段落）。每个段落都包含一个“文档”或检索单元。同时，还保留了每个段落的维基百科文章标题。
 ## 3. 项目结构
 ```
 ├── README.md
